<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="50dp">


    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/nome"
        android:textSize="24sp" />

    
    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:hint="@string/digite_seu_nome" />

    <TextView
        android:id="@+id/tvIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idade_text"
        android:textSize="24sp"
        android:layout_marginTop="24sp" />


    <EditText
        android:id="@+id/edtAnoNascimento"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/ano_nascimento"
        android:inputType="number" />


    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textStyle="bold"
        android:layout_gravity="center" />

</LinearLayout>
