<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.PessoaFragment">


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/digite_seu_nome" />

    <TextView
        android:id="@+id/tvIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idade_text"
        android:textSize="24sp"
        android:layout_marginTop="24sp" />


    <EditText
        android:id="@+id/edtAnoNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ano_nascimento"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sexo: "
        android:textSize="24sp" />

<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/btnMasculino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Masculino" />

    <RadioButton
        android:id="@+id/btnFeminino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Feminino" />
</RadioGroup>


    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button"
        android:textStyle="bold"
        android:layout_marginTop="7dp"/>

    <Button
        android:id="@+id/btnDeletar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="Excluir"
        android:textStyle="bold"
        style="@style/Widget.Material3.Button.OutlinedButton"
        />


</LinearLayout>